Files/AWS/RDS/big_step_template_2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: "OurClass>RDS>"

Parameters:
  DBName:
    Default: mydb
    Description: "The database name"
    Type: String
    MinLength: 1
    MaxLength: 64
    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
    ConstraintDescription: "must begin with a letter and contain only alphanumeric characters."
  DBUsername:
    Default: myuser
    NoEcho: true
    Description: "The database admin account username"
    Type: String
    MinLength: 1
    MaxLength: 16
    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
    ConstraintDescription: "must begin with a letter and contain only alphanumeric characters."
  DBPassword:
    Default: mypassword
    NoEcho: true
    Description: "The database admin account password"
    Type: String
    MinLength: 1
    MaxLength: 41
    AllowedPattern: "[a-zA-Z0-9]*"
    ConstraintDescription: "must contain only alphanumeric characters."
  DBClass:
    Default: db.t2.micro
    Description: "The database instance class"
    Type: String
    AllowedValues: [db.t2.micro, db.t2.small]
    ConstraintDescription: "must select a valid database instance type."
  DBAllocatedStorage:
    Default: 5
    Description: "The size of the database (Gb)"
    Type: Number
    MinValue: 5
    MaxValue: 1024
    ConstraintDescription: "must be between 5 and 1024Gb."

Resources:
  OurClassRDS:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: !Ref DBName
      Engine: "mysql"
      MasterUsername: !Ref DBUsername
      DBInstanceClass: !Ref DBClass
      DBSecurityGroups: [!Ref DBSecurityGroup]
      AllocatedStorage: !Ref DBAllocatedStorage
      MasterUserPassword: !Ref DBPassword
  DBSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      DBSecurityGroupIngress:
        EC2SecurityGroupName:
          Ref: WebServerSecurityGroup
      GroupDescription: "Frontend Access"

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP access via port 80 and SSH access"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp:
            Ref: SSHLocation
